plugins {
    id 'dev.architectury.loom-no-remap' version '1.17-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.5-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.4.2' apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'architectury-plugin'

    group = rootProject.maven_group
    version = rootProject.mod_version

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom-no-remap'
    apply plugin: 'maven-publish'

    def isCommon = project.name == 'common'

    base {
        archivesName = "${rootProject.mod_id}-${rootProject.minecraft_version}-${project.name}"
    }

    repositories {
        mavenLocal()
        maven { url 'https://maven.exodusstudio.org/releases' }
        maven { url 'https://maven.exodusstudio.org/snapshots' }
        maven { url 'https://maven.terraformersmc.com/releases' }
        maven { url 'https://maven.blamejared.com/' }
        maven { url 'https://api.modrinth.com/maven' } // Jade
        maven {
            name = 'NeoForged'
            url = 'https://maven.neoforged.net/releases'
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:${rootProject.minecraft_version}"

        implementation "fr.tathan.exoconfig:exoconfig-${project.name}-${rootProject.minecraft_version}:${rootProject.exoconfig_version}"
        implementation "fr.tathan.sky-aesthetics:sky-aesthetics-${project.name}-${rootProject.minecraft_version}:${rootProject.skyaesthetics_version}"
    }

    if (!isCommon) {
        apply plugin: 'com.gradleup.shadow'

        configurations {
            common
            shadowCommon
            compileClasspath.extendsFrom common
            runtimeClasspath.extendsFrom common
        }

        jar {
            archiveClassifier = 'raw'
        }

        shadowJar {
            dependsOn jar
            mainSpec.sourcePaths.clear()
            from(zipTree(tasks.jar.archiveFile))
            configurations = [project.configurations.shadowCommon]
            archiveClassifier = null
            zip64 = true
        }

        assemble.dependsOn shadowJar

        configurations {
            apiElements {
                outgoing.artifacts.clear()
                outgoing.artifact(project.tasks.shadowJar)
            }
            runtimeElements {
                outgoing.artifacts.clear()
                outgoing.artifact(project.tasks.shadowJar)
            }
        }
    }
}
